<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:background="@drawable/title_bar"
    android:orientation="horizontal"
    android:baselineAligned="false">

    <!-- TEST Button -->
    <LinearLayout
        android:id="@+id/id_test_btn"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <Button
            android:id="@+id/id_test_btn_img"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/btn_test_pressed"
            android:clickable="false"
            android:contentDescription="@string/testBtn_text" />

        <TextView
            android:id="@+id/id_test_btn_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/testBtn_text"
            android:textColor="@color/colorBtnTextPressed" />
    </LinearLayout>

    <!-- RESULT Button -->
    <LinearLayout
        android:id="@+id/id_result_btn"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <Button
            android:id="@+id/id_result_btn_img"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/btn_result_normal"
            android:clickable="false"
            android:contentDescription="@string/resultBtn_text" />

        <TextView
            android:id="@+id/id_result_btn_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resultBtn_text"
            android:textColor="@color/colorBtnTextNormal" />
    </LinearLayout>

    <!-- UPLOAD Button -->
    <LinearLayout
        android:id="@+id/id_upload_btn"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <Button
            android:id="@+id/id_upload_btn_img"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/btn_upload_normal"
            android:clickable="false"
            android:contentDescription="@string/uploadBtn_text" />

        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/id_upload_btn_text"
            android:layout_height="wrap_content"
            android:text="@string/uploadBtn_text"
            android:textColor="@color/colorBtnTextNormal"
            />
    </LinearLayout>

    <!-- ABOUT Button -->
    <LinearLayout
        android:id="@+id/id_about_btn"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <Button
            android:id="@+id/id_about_btn_img"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/btn_about_normal"
            android:clickable="false"
            android:contentDescription="@string/uploadBtn_text" />

        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/id_about_btn_text"
            android:layout_height="wrap_content"
            android:text="@string/aboutBtn_text"
            android:textColor="@color/colorBtnTextNormal"
            />
    </LinearLayout>

</LinearLayout>